methods.flowerpot.FlowerPot.scala.code
def growFlowers() {def makeFlower(c:Color) {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); brushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
makeFlower(Color.RED); forward(); forward(); forward(); forward(); makeFlower(Color.CYAN); right(); makeFlower(Color.GREEN); backward(); backward(); backward(); backward(); makeFlower(Color.PINK); forward(); forward(); left(); forward(); forward(); right(); makeFlower(Color.ORANGE); backward(); backward(); right(); backward(); backward(); left()}